--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ torchvision==0.16.0
 torchaudio==2.1.0
 transformers>=4.46.0
 datasets>=2.13.0
-trl>=0.13.0
+trl<0.9.0
 unsloth>=0.1.0
 bitsandbytes>=0.40.0
 xformers<0.0.27
