--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 numpy<2.0
-torch==2.2.0
-torchvision==0.17.0
-torchaudio==2.2.0
+torch==2.1.0
+torchvision==0.16.0
+torchaudio==2.1.0
 transformers>=4.46.0
 datasets>=2.13.0
 trl<0.9.0
@@ -9,3 +9,4 @@ unsloth>=0.1.0
 bitsandbytes>=0.40.0
 xformers==0.0.24
 ipywidgets>=7.0.0
+peft<0.12.0
